WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95538
The options dictionary in Notification constructor should not accept event listeners
https://bugs.webkit.org/show_bug.cgi?id=95538
Summary
The options dictionary in Notification constructor should not accept event li...
Jon Lee
Reported
2012-08-31 01:46:27 PDT
According to the latest spec, event listeners can only be set after the Notification has been created. A previous version allowed them to be set in the options dictionary.
http://dvcs.w3.org/hg/notifications/raw-file/tip/Overview.html#api
Attachments
Patch
(5.41 KB, patch)
2012-08-31 14:06 PDT
,
Jon Lee
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2012-08-31 01:46:52 PDT
<
rdar://problem/12213901
>
Jon Lee
Comment 2
2012-08-31 14:06:25 PDT
Created
attachment 161768
[details]
Patch
Jon Lee
Comment 3
2012-09-10 11:07:55 PDT
Committed
r128080
: <
http://trac.webkit.org/changeset/128080
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug